@@ -1,3 +1,6 @@
+2006-09-20  Emmanuel Dreyfus  <manu@netbsd.org>
+	* src/Racoon/admin.c: Do not free id and key, as they are used later
+
 2006-09-29  Emmanuel Dreyfus  <manu@netbsd.org>
 	* src/racoon/racoonctl.c: Fix the previous fix
 
